# ch57x_template

./: CMakeLists.txt  link.ld
Startup/: startup_CH573.S
